--- a/verificador_ortografico/makefile
+++ b/verificador_ortografico/makefile
@@ -2,16 +2,12 @@ CFLAGS = -Wall -Werror -pedantic
 LDLIBS = -lm
 CC = gcc
 
-SRCDIR = src
 OBJDIR = obj
 
 OBJS = $(OBJDIR)/ortografia.o
 OBJS += $(OBJDIR)/dicionario.o
 
 MAIN = ortografia.c
-HEADER = src/dicionario.h
-
-MAIN_O = $(OBJDIR)/ortografia.o
 
 .PHONY : clean all debug
 
@@ -20,15 +16,12 @@ all: ortografia
 ortografia: build
 	$(CC) -o $@ $(OBJS) $(LDLIBS)
 
-build: mkdir $(MAIN_O) $(OBJS)
+build: mkdir $(OBJS)
 
 mkdir:
 	-mkdir -p $(OBJDIR)
 
-$(MAIN_O): $(MAIN) $(HEADER)
-	$(CC) -c $< -o $@ $(CFLAGS)
-
-$(OBJDIR)/%.o: $(SRCDIR)/%.c
+$(OBJDIR)/%.o: %.c
 	$(CC) -c $< -o $@ $(CFLAGS)
 
 clean :
